--- a/main.tex
+++ b/main.tex
@@ -38,13 +38,16 @@ Lê Nguyễn Minh Phúc – 2251120040
 
 \mainthesis
 
-% Main chapter in thesis
+% Front chapter in thesis
 \include{chapters/front/introduction.tex}
+% Main chapter in thesis
 \include{chapters/main/chapter1/container}
 \include{chapters/main/chapter2/container}
 \include{chapters/main/chapter3/container}
 \include{chapters/main/chapter4/container}
 \include{chapters/main/chapter5/container}
+% Back chapter in thesis
+\include{chapters/back/references.tex}
 
 % Print references
 \end{document}
