change thesis title

--- a/main.tex
+++ b/main.tex
@@ -10,7 +10,7 @@
 \upperuniname{TRƯỜNG ĐẠI HỌC GIAO THÔNG VẬN TẢI}
 \uniname{THÀNH PHỐ HỒ CHÍ MINH}
 \deptname{KHOA CÔNG NGHỆ THÔNG TIN}
-\title{HỆ THỐNG NHẬN DIỆN BIỂN SỐ}
+\title{BÃI ĐỖ XE THÔNG MINH }
 \stunamelist{%
 Lê Tuấn Khang - 225110420\\
 Hồ Huỳnh Nhu - 2251120433\\
