create template for introduction chapter

--- a/main.tex
+++ b/main.tex
@@ -39,7 +39,7 @@ Lê Nguyễn Minh Phúc – 2251120040
 \mainthesis
 
 % Front chapter in thesis
-\include{chapters/front/introduction.tex}
+\include{chapters/front/introduction/container}
 % Main chapter in thesis
 \include{chapters/main/chapter1/container}
 \include{chapters/main/chapter2/container}
