--- a/main.tex
+++ b/main.tex
@@ -23,6 +23,7 @@ Lê Nguyễn Minh Phúc – 2251120040
 
 % =========== Hết phần thay đổi thông tin ===========
 \input{chapters/front/glossaries.tex}
+\usepackage{enumitem}
 \makeglossaries
 % Begin thesis
 
