done section4 in chapter3

--- a/main.tex
+++ b/main.tex
@@ -25,6 +25,11 @@ Lê Nguyễn Minh Phúc – 2251120040
 \input{chapters/front/glossaries.tex}
 \usepackage{enumitem}
 \makeglossaries
+\usepackage{float}
+\usepackage{tikz}
+\usepackage{placeins}
+
+\usetikzlibrary{arrows.meta, positioning, shapes.geometric}
 % Begin thesis
 
 \begin{document}
