--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -20,7 +20,13 @@ MVC & Model-View-Controller \\ \hline
 MVVM & Model-View-ViewModel \\ \hline
 GPU & Graphics Processing Unit \\ \hline
 LFW & Labeled Faces in the Wild \\ \hline
-
+KNN & K-Nearest Neighbors \\ \hline
+SVM & Support Vector Machine \\ \hline
+HOG & Histogram of Oriented Gradients \\ \hline
+mAP & mean Average Precision \\ \hline
+IoU & Intersection over Union \\ \hline
+OCR & Optical Character Recognition \\ \hline
+SSD & Single Shot MultiBox Detector \\ \hline
 \end{longtable}
 \end{center}
 
