--- a/cover.tex
+++ b/cover.tex
@@ -27,7 +27,7 @@
             
             \vspace{0.3cm}
             
-            {\fontsize{14}{17}\selectfont \textbf{Mã số: ………………….}}
+            {\fontsize{14}{17}\selectfont \textbf{Mã số:KHSV028}}
             
             \vspace{4cm}
             
@@ -80,7 +80,7 @@
             \vspace{0.3cm}
             
             \begin{tabular}{ll}
-                {\fontsize{14}{17}\selectfont \textbf{Mã số}} & {\fontsize{14}{17}\selectfont \textbf{:………………….}}
+                {\fontsize{14}{17}\selectfont \textbf{Mã số:}} & {\fontsize{14}{17}\selectfont \textbf{KHSV028}}
             \end{tabular}
             
             \vspace{1.0cm}
