--- a/main.tex
+++ b/main.tex
@@ -100,9 +100,10 @@
 
 % ===== MỤC LỤC - ĐÁNH SỐ LA MÃ (i, ii, iii...) =====
 % ===== MỤC LỤC - ĐÁNH SỐ LA MÃ (i, ii, iii...) =====
-
+\begin{spacing}{1.5}
 \include{chapters/front/thanks}
 \include{chapters/front/commit}
+\end{spacing}
 \pagenumbering{roman}
 \setcounter{page}{1}
 % Tạm tắt format của tocloft
