--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -16,7 +16,6 @@ CNN & Convolutional Neural Network \\ \hline
 ReLU & Rectified Linear Unit \\ \hline
 UI & User Interface \\ \hline
 CRUD & Create, Read, Update, Delete \\ \hline
-MVC & Model-View-Controller \\ \hline
 MVVM & Model-View-ViewModel \\ \hline
 GPU & Graphics Processing Unit \\ \hline
 LFW & Labeled Faces in the Wild \\ \hline
@@ -27,6 +26,7 @@ mAP & mean Average Precision \\ \hline
 IoU & Intersection over Union \\ \hline
 OCR & Optical Character Recognition \\ \hline
 SSD & Single Shot MultiBox Detector \\ \hline
+API & Application Programming Interface \\ \hline
 \end{longtable}
 \end{center}
 
